[package]
name = "webrtc_lib"
version = "0.1.0"
authors = ["WolverinDEV <git@teaspeak.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# libnice = { git = "https://github.com/WolverinDEV/rust-libnice" }
libnice = { git = "https://github.com/MissXecutioner/rust-libnice.git" }
libusrsctp-sys = { git = "https://github.com/MissXecutioner/rust-usrsctp-sys.git" }
#libusrsctp-sys = { path = "../rust-usrsctp-sys" }
libsrtp2-sys = { git = "https://github.com/MissXecutioner/rust-srtp2-sys.git" }
rtp-rs = { git = "https://github.com/MissXecutioner/rtp-rs.git" }
tokio-tungstenite = "0.28.0"
tokio = { version = "1.49", features = ["full"] }
futures = "0.3.31"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
webrtc-sdp = "0.3.13"
glib = "0.21.5"
retain_mut = "0.1.9"
openssl = "0.10.75"
lazy_static = "1.5.0"
libc = "0.2.180"
byteorder = "1.5.0"
rand = "0.9.2"
num = "0.4.3"
slog = { version = "2.8.2", features = ["release_max_level_trace", "max_level_trace"] }

[dev-dependencies]
tokio-test = "0.4.5"
slog-term = "2.9.2"

[features]
simulated-loss = []
